<resources>
    <string name="app_name">TipSplitterApp</string>
    <string name="tip_amount_template">Tip amount: %1$s</string>
    <string name="tip_amount_person_template">Tip amount / person: %1$s</string>
    <string name="total_template">Total: %1$s</string>
    <string name="total_person_template">Total / person: %1$s</string>
    <string name="bill_hint">Bill $</string>
    <string name="number_of_people_hint">Number of people</string>
    <string name="_5">5%</string>
    <string name="_10">10%</string>
    <string name="_15">15%</string>
    <string name="_20">20%</string>
    <string name="_25">25%</string>
    <string name="_30">30%</string>
    <string name="calculate_btn_text">Calculate</string>
</resources>