<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_bill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:boxBackgroundColor="@color/til_color"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_bill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bill_hint"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nr_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_bill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:boxBackgroundColor="@color/til_color"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_nr_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_people_hint"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_tip_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        app:layout_constraintTop_toBottomOf="@id/til_nr_people"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_tip_10"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/btn_color"/>

    <Button
        android:id="@+id/btn_tip_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        app:layout_constraintTop_toBottomOf="@id/til_nr_people"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/btn_color"/>

    <Button
        android:id="@+id/btn_tip_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15"
        app:layout_constraintTop_toBottomOf="@id/til_nr_people"
        app:layout_constraintStart_toStartOf="@id/btn_tip_10"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/btn_color"/>

    <Button
        android:id="@+id/btn_tip_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        app:layout_constraintTop_toBottomOf="@id/btn_tip_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_tip_10"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/btn_color"/>

    <Button
        android:id="@+id/btn_tip_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_25"
        app:layout_constraintTop_toBottomOf="@id/btn_tip_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/btn_color"/>

    <Button
        android:id="@+id/btn_tip_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_30"
        app:layout_constraintTop_toBottomOf="@id/btn_tip_10"
        app:layout_constraintStart_toStartOf="@id/btn_tip_10"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/btn_color"/>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_btn_text"
        app:layout_constraintTop_toBottomOf="@id/btn_tip_25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/btn_calculate"/>

    <TextView
        android:id="@+id/tv_tip_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_tip_amount_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_tip_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_tip_amount_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_tip_total_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAlignment="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>